# kafkacl

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
kafkacl/: __init__.py  base.py  charmcraft.yaml  config.py  connect.py  helpers.py  models.py
kafkacl/lib/charms/data_platform_libs/v0/: data_interfaces.py
tests/app_charm/: charmcraft.yaml  config.yaml  metadata.yaml  requirements.txt
tests/app_charm/src/: charm.py  integrator.py  server.py
tests/integration/: conftest.py  helpers.py  test_charm.py
tests/resources/: FileConnector.tar
tests/unit/: conftest.py  test_scenario.py
